Bugfix: nowrap columns should also not wrap the header.

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datatable.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datatable.scss
@@ -113,6 +113,9 @@ td.ui-cellsel:hover {
 th.ui-sortable {
 	cursor: pointer;
 }
+th[nowrap="nowrap"] .ui-sortable {
+	white-space: nowrap;
+}
 
 div.ui-sortable {
 	position: relative;
